    - Fixed last timer for deleting old residents.
    - Added a new setting 'regen_delay'.
      This setting is in seconds. It will allow players to break protected blocks in the wild and towns, even if they dont have permission.
      The blocks will drop no loot and will regenerate after the specified time.
      Defaults to 0 (disabled).
    - Added Nation bank caps and moved the settings to the economy section.
    - Moved daily tax settings to the economy section of the config.
    - Tidy of economy settings (WARNING - be sure to check the values after upgrading).
    - Added a broadcast if a Nation is disbanded due to a town deletion.
    - Fixed '/xxx claim auto' commands for town and resident.
    - Fixed '/plot unclaim xx' command. Now errors if it's an invalid entry.
    - Minor alterations to english.yml
    - No more sneak jump to avoid the cheat protection.
    - Fixed resetting tags using '/town set tag '.
    - Plot regen should now correctly restore different types of leaves/wood etc.
    - Added a new Default new world setting (wild_revert_on_mob_explosion). When enabled this will replace blocks destroyed by creature explosions in the wild.
    - Fixed a 'TickNextTick list out of synch' error on a new day.
    - Fixed overwriting custom language files (no, really this time).
    - Towny will now clean up it's backup folder. Default time to keep backups is 90 days (configurable in config).
    - Fixed default switch and item use permissions for ally and outsider.
    - Finally fixed the elusive error when getLastLocation() throws a NullPointerException.
    - Fixed an infinite loop when a player uses a fly hack over void.
    - Added support for Register 2.0 (Register.jar) - Supports iConomy5, iConomy6, EssentialsEco, BOSEconomy.
      (https://github.com/iConomy/Register/tree/master/dist)
    - Towny will no longer cause an exception if users attempt to use iConomy 6 instead of 5.01 natively.