@@ -18,10 +18,12 @@ public enum ConfigNodes {
 				                    "#    towny.admin: User is able to use /townyadmin, as well as the ability to build/destroy anywhere. User is also able to make towns or nations when set to admin only.",
 				                    "#    towny.cheat.bypass : User is able to use any fly mods and double block jump (disables towny cheat protection for this user).",
 				                    "#    towny.town.new :User is able to create a town",
+				                    "#    towny.town.delete :User is able to delete their town",
 				                    "#    towny.town.claim : User is able to expand his town with /town claim",
 				                    "#    towny.town.plot : User is able to use the /plot commands",
 				                    "#    towny.town.resident : User is able to join towns upon invite.",
 				                    "#    towny.nation.new :User is able to create a nation",
+				                    "#    towny.nation.delete :User is able to delete their nation",
 				                    "#    towny.wild.*: User is able to build/destroy in wild regardless.",
 				                    "#        towny.wild.build",
 				                    "#        towny.wild.destroy",
